RESOLVED FIXED 108382
REGRESSION(r128517): Percentage heights in quirks mode collapse when printing
https://bugs.webkit.org/show_bug.cgi?id=108382
Summary REGRESSION(r128517): Percentage heights in quirks mode collapse when printing
Ojan Vafai
Reported 2013-01-30 14:12:45 PST
[REGRESSION: r128517] Percentage heights in quirks mode collapse when printing
Attachments
Patch (12.21 KB, patch)
2013-01-30 14:18 PST, Ojan Vafai
no flags
Try to fix mac failures (12.48 KB, patch)
2013-01-30 15:56 PST, Ojan Vafai
no flags
Patch for landing (13.39 KB, patch)
2013-01-31 11:16 PST, Ojan Vafai
no flags
Ojan Vafai
Comment 1 2013-01-30 14:18:04 PST
Build Bot
Comment 2 2013-01-30 15:03:50 PST
Comment on attachment 185569 [details] Patch Attachment 185569 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://queues.webkit.org/results/16196849 New failing tests: printing/quirks-percentage-height-body.html printing/quirks-percentage-height.html printing/standards-percentage-heights.html
Dave Hyatt
Comment 3 2013-01-30 15:05:28 PST
Comment on attachment 185569 [details] Patch r=me
Ojan Vafai
Comment 4 2013-01-30 15:56:25 PST
Created attachment 185606 [details] Try to fix mac failures
Build Bot
Comment 5 2013-01-30 19:53:27 PST
Comment on attachment 185606 [details] Try to fix mac failures Attachment 185606 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://queues.webkit.org/results/16258068 New failing tests: printing/quirks-percentage-height-body.html printing/quirks-percentage-height.html printing/standards-percentage-heights.html
Build Bot
Comment 6 2013-01-30 21:26:59 PST
Comment on attachment 185606 [details] Try to fix mac failures Attachment 185606 [details] did not pass mac-ews (mac): Output: http://queues.webkit.org/results/16263055 New failing tests: fast/multicol/shrink-to-column-height-for-pagination.html
Ojan Vafai
Comment 7 2013-01-31 11:16:48 PST
Created attachment 185823 [details] Patch for landing
Tony Chang
Comment 8 2013-01-31 11:36:15 PST
Comment on attachment 185823 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=185823&action=review > LayoutTests/platform/mac-wk2/TestExpectations:313 > +webkit.org/b/106405 printing/quirks-percentage-height-body.html [ Skip ] > +webkit.org/b/106405 printing/quirks-percentage-height.html [ Skip ] > +webkit.org/b/106405 printing/standards-percentage-heights.html [ Skip ] Is this the right bug number?
Ojan Vafai
Comment 9 2013-01-31 11:52:31 PST
Comment on attachment 185823 [details] Patch for landing Lol. Whooops.
Ojan Vafai
Comment 10 2013-01-31 12:01:40 PST
Note You need to log in before you can comment on or make changes to this bug.